miniProyecto2/pypar.output
No terminales inútiles en gramática

   comaS
   expr_stmt_aux_b_a
   exprlist
   exprlist_aux
   s15
   s29
   s30
   s31
   s32
   string_aux


Terminales no usados en gramática

   ESPTAB
   OPERADOR
   CLASS
   FINALLY
   NONE
   LAMBDA
   TRY
   DEF
   FROM
   NONLOCAL
   GLOBAL
   WITH
   AS
   YIELD
   ASSERT
   IMPORT
   EXCEPT
   RAISE
   EXEC
   ENETILDE
   DASTERISCO
   ACORCHETE
   CCORCHETE
   ALLAVE
   CLLAVE
   PUNTO
   AT
   IGUAL
   MENOSMAYOR
   CSIMPLE
   IDIAG
   GATO
   DIDIAG
   SALIDA
   FIN


Estado 35 conflictos: 21 reducción(ones)/reducción(ones)
Estado 37 conflictos: 21 reducción(ones)/reducción(ones)


Gramática

    0 $accept: GOAL $end

    1 GOAL: file_input

    2 file_input: NEWLINE file_input
    3           | stmt file_input
    4           | %empty

    5 stmt: simple_stmt
    6     | compound_stmt

    7 simple_stmt: small_stmt simple_stmt_aux NEWLINE

    8 simple_stmt_aux: PCOMA small_stmt simple_stmt_aux
    9                | ss_aux

   10 ss_aux: PCOMA
   11       | %empty

   12 small_stmt: expr_stmt
   13           | print_stmt
   14           | del_stmt
   15           | pass_stmt
   16           | flow_stmt

   17 expr_stmt: IDENTIFICADOR expr_stmt_aux_b
   18          | test

   19 expr_stmt_aux_b: augassign test

   20 augassign: MASIGUAL
   21          | MENOSIGUAL
   22          | ASTIGUAL
   23          | DIAIGUAL
   24          | PORIGUAL
   25          | AMPIGUAL
   26          | PIPEIGUAL
   27          | CIRCIGUAL
   28          | DMENORIGUAL
   29          | DMAYORIGUAL
   30          | DASTIGUAL
   31          | DDIAIGUAL

   32 print_stmt: PRINT test

   33 del_stmt: DEL IDENTIFICADOR

   34 pass_stmt: PASS

   35 flow_stmt: break_stmt
   36          | continue_stmt
   37          | return_stmt

   38 break_stmt: BREAK

   39 continue_stmt: CONTINUE

   40 return_stmt: RETURN return_stmt_aux

   41 return_stmt_aux: test
   42                | %empty

   43 $@1: %empty

   44 compound_stmt: if_stmt $@1 if_else_stmt
   45              | while_stmt
   46              | while_else_stmt
   47              | for_stmt
   48              | for_else_stmt

   49 if_stmt: IF test DPUNTO NEWLINE suite if_stmt_aux

   50 if_else_stmt: if_stmt s8

   51 if_stmt_aux: ELIF test DPUNTO NEWLINE suite if_stmt_aux
   52            | %empty

   53 s8: ELSE DPUNTO NEWLINE suite
   54   | %empty

   55 while_stmt: WHILE test DPUNTO NEWLINE suite

   56 while_else_stmt: while_stmt s8

   57 for_stmt: FOR IDENTIFICADOR IN testlist DPUNTO NEWLINE suite

   58 for_else_stmt: for_stmt s8

   59 suite: simple_stmt
   60      | INDENT stmt suite_aux DEDENT

   61 suite_aux: stmt suite_aux
   62          | %empty

   63 test: or_test

   64 or_test: and_test or_test_aux

   65 or_test_aux: OR and_test or_test_aux
   66            | %empty

   67 and_test: not_test and_test_aux

   68 and_test_aux: AND not_test and_test_aux
   69             | %empty

   70 not_test: NOT not_test
   71         | comparison

   72 comparison: expr comparison_aux

   73 comparison_aux: comp_op expr comparison_aux
   74               | %empty

   75 comp_op: MENOR
   76        | MAYOR
   77        | DIGUAL
   78        | MAIGUAL
   79        | MEIGUAL
   80        | MENORMAYOR
   81        | NIGUAL
   82        | IN
   83        | NOT IN
   84        | IS
   85        | IS NOT

   86 expr: xor_expr expr_aux

   87 expr_aux: PIPE xor_expr expr_aux
   88         | %empty

   89 xor_expr: and_expr xor_expr_aux

   90 xor_expr_aux: CIRCUNFLEJO and_expr xor_expr_aux
   91             | %empty

   92 and_expr: shift_expr and_expr_aux

   93 and_expr_aux: AMPERSON shift_expr and_expr_aux
   94             | %empty

   95 shift_expr: arith_expr shift_expr_aux

   96 shift_expr_aux: DMENOR arith_expr shift_expr_aux
   97               | DMAYOR arith_expr shift_expr_aux
   98               | %empty

   99 arith_expr: term arith_expr_aux

  100 arith_expr_aux: ae_aux term arith_expr_aux
  101               | %empty

  102 ae_aux: MAS
  103       | MENOS

  104 term: factor term_aux

  105 term_aux: t_aux factor term_aux
  106         | %empty

  107 t_aux: ASTERISCO
  108      | DIAG
  109      | PORCEN
  110      | DDIAG

  111 factor: ae_aux factor
  112       | atom

  113 atom: IDENTIFICADOR
  114     | FLOTANTE
  115     | ENTERO
  116     | STRING
  117     | TRUE
  118     | FALSE

  119 testlist: APAREN testlist_aux CPAREN

  120 testlist_aux: test r2
  121             | %empty

  122 r2: COMA test r2
  123   | %empty


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
STRING (258) 116
ESPTAB (259)
OPERADOR (260)
IDENTIFICADOR (261) 17 33 57 113
PRINT (262) 32
FALSE (263) 118
CLASS (264)
FINALLY (265)
IS (266) 84 85
RETURN (267) 40
NONE (268)
CONTINUE (269) 39
FOR (270) 57
LAMBDA (271)
TRY (272)
TRUE (273) 117
DEF (274)
FROM (275)
NONLOCAL (276)
WHILE (277) 55
AND (278) 68
DEL (279) 33
GLOBAL (280)
NOT (281) 70 83 85
WITH (282)
AS (283)
ELIF (284) 51
IF (285) 49
OR (286) 65
YIELD (287)
ASSERT (288)
ELSE (289) 53
IMPORT (290)
PASS (291) 34
BREAK (292) 38
EXCEPT (293)
IN (294) 57 82 83
RAISE (295)
EXEC (296)
NIGUAL (297) 81
DIGUAL (298) 77
MAIGUAL (299) 78
MEIGUAL (300) 79
MAYOR (301) 76
MENOR (302) 75
ENETILDE (303)
CIRCUNFLEJO (304) 90
PIPE (305) 87
AMPERSON (306) 93
DMAYOR (307) 97
DMENOR (308) 96
PORCEN (309) 109
DDIAG (310) 110
DIAG (311) 108
DASTERISCO (312)
ASTERISCO (313) 107
MENOS (314) 103
MAS (315) 102
APAREN (316) 119
CPAREN (317) 119
ACORCHETE (318)
CCORCHETE (319)
ALLAVE (320)
CLLAVE (321)
COMA (322) 122
DPUNTO (323) 49 51 53 55 57
PUNTO (324)
PCOMA (325) 8 10
AT (326)
IGUAL (327)
MENOSMAYOR (328)
MASIGUAL (329) 20
MENOSIGUAL (330) 21
ASTIGUAL (331) 22
DIAIGUAL (332) 23
DDIAIGUAL (333) 31
PORIGUAL (334) 24
AMPIGUAL (335) 25
PIPEIGUAL (336) 26
CIRCIGUAL (337) 27
DMAYORIGUAL (338) 29
DMENORIGUAL (339) 28
DASTIGUAL (340) 30
MENORMAYOR (341) 80
CSIMPLE (342)
IDIAG (343)
GATO (344)
DIDIAG (345)
NEWLINE (346) 2 7 49 51 53 55 57
ENTERO (347) 115
FLOTANTE (348) 114
INDENT (349) 60
SALIDA (350)
DEDENT (351) 60
FIN (352)


No terminales con las reglas donde aparecen

$accept (98)
    en la izquierda: 0
GOAL (99)
    en la izquierda: 1, en la derecha: 0
file_input (100)
    en la izquierda: 2 3 4, en la derecha: 1 2 3
stmt (101)
    en la izquierda: 5 6, en la derecha: 3 60 61
simple_stmt (102)
    en la izquierda: 7, en la derecha: 5 59
simple_stmt_aux (103)
    en la izquierda: 8 9, en la derecha: 7 8
ss_aux (104)
    en la izquierda: 10 11, en la derecha: 9
small_stmt (105)
    en la izquierda: 12 13 14 15 16, en la derecha: 7 8
expr_stmt (106)
    en la izquierda: 17 18, en la derecha: 12
expr_stmt_aux_b (107)
    en la izquierda: 19, en la derecha: 17
augassign (108)
    en la izquierda: 20 21 22 23 24 25 26 27 28 29 30 31, en la derecha:
    19
print_stmt (109)
    en la izquierda: 32, en la derecha: 13
del_stmt (110)
    en la izquierda: 33, en la derecha: 14
pass_stmt (111)
    en la izquierda: 34, en la derecha: 15
flow_stmt (112)
    en la izquierda: 35 36 37, en la derecha: 16
break_stmt (113)
    en la izquierda: 38, en la derecha: 35
continue_stmt (114)
    en la izquierda: 39, en la derecha: 36
return_stmt (115)
    en la izquierda: 40, en la derecha: 37
return_stmt_aux (116)
    en la izquierda: 41 42, en la derecha: 40
compound_stmt (117)
    en la izquierda: 44 45 46 47 48, en la derecha: 6
$@1 (118)
    en la izquierda: 43, en la derecha: 44
if_stmt (119)
    en la izquierda: 49, en la derecha: 44 50
if_else_stmt (120)
    en la izquierda: 50, en la derecha: 44
if_stmt_aux (121)
    en la izquierda: 51 52, en la derecha: 49 51
s8 (122)
    en la izquierda: 53 54, en la derecha: 50 56 58
while_stmt (123)
    en la izquierda: 55, en la derecha: 45 56
while_else_stmt (124)
    en la izquierda: 56, en la derecha: 46
for_stmt (125)
    en la izquierda: 57, en la derecha: 47 58
for_else_stmt (126)
    en la izquierda: 58, en la derecha: 48
suite (127)
    en la izquierda: 59 60, en la derecha: 49 51 53 55 57
suite_aux (128)
    en la izquierda: 61 62, en la derecha: 60 61
test (129)
    en la izquierda: 63, en la derecha: 18 19 32 41 49 51 55 120 122
or_test (130)
    en la izquierda: 64, en la derecha: 63
or_test_aux (131)
    en la izquierda: 65 66, en la derecha: 64 65
and_test (132)
    en la izquierda: 67, en la derecha: 64 65
and_test_aux (133)
    en la izquierda: 68 69, en la derecha: 67 68
not_test (134)
    en la izquierda: 70 71, en la derecha: 67 68 70
comparison (135)
    en la izquierda: 72, en la derecha: 71
comparison_aux (136)
    en la izquierda: 73 74, en la derecha: 72 73
comp_op (137)
    en la izquierda: 75 76 77 78 79 80 81 82 83 84 85, en la derecha:
    73
expr (138)
    en la izquierda: 86, en la derecha: 72 73
expr_aux (139)
    en la izquierda: 87 88, en la derecha: 86 87
xor_expr (140)
    en la izquierda: 89, en la derecha: 86 87
xor_expr_aux (141)
    en la izquierda: 90 91, en la derecha: 89 90
and_expr (142)
    en la izquierda: 92, en la derecha: 89 90
and_expr_aux (143)
    en la izquierda: 93 94, en la derecha: 92 93
shift_expr (144)
    en la izquierda: 95, en la derecha: 92 93
shift_expr_aux (145)
    en la izquierda: 96 97 98, en la derecha: 95 96 97
arith_expr (146)
    en la izquierda: 99, en la derecha: 95 96 97
arith_expr_aux (147)
    en la izquierda: 100 101, en la derecha: 99 100
ae_aux (148)
    en la izquierda: 102 103, en la derecha: 100 111
term (149)
    en la izquierda: 104, en la derecha: 99 100
term_aux (150)
    en la izquierda: 105 106, en la derecha: 104 105
t_aux (151)
    en la izquierda: 107 108 109 110, en la derecha: 105
factor (152)
    en la izquierda: 111 112, en la derecha: 104 105 111
atom (153)
    en la izquierda: 113 114 115 116 117 118, en la derecha: 112
testlist (154)
    en la izquierda: 119, en la derecha: 57
testlist_aux (155)
    en la izquierda: 120 121, en la derecha: 119
r2 (156)
    en la izquierda: 122 123, en la derecha: 120 122


State 0

    0 $accept: . GOAL $end

    STRING         desplazar e ir al estado 1
    IDENTIFICADOR  desplazar e ir al estado 2
    PRINT          desplazar e ir al estado 3
    FALSE          desplazar e ir al estado 4
    RETURN         desplazar e ir al estado 5
    CONTINUE       desplazar e ir al estado 6
    FOR            desplazar e ir al estado 7
    TRUE           desplazar e ir al estado 8
    WHILE          desplazar e ir al estado 9
    DEL            desplazar e ir al estado 10
    NOT            desplazar e ir al estado 11
    IF             desplazar e ir al estado 12
    PASS           desplazar e ir al estado 13
    BREAK          desplazar e ir al estado 14
    MENOS          desplazar e ir al estado 15
    MAS            desplazar e ir al estado 16
    NEWLINE        desplazar e ir al estado 17
    ENTERO         desplazar e ir al estado 18
    FLOTANTE       desplazar e ir al estado 19

    $default  reduce usando la regla 4 (file_input)

    GOAL             ir al estado 20
    file_input       ir al estado 21
    stmt             ir al estado 22
    simple_stmt      ir al estado 23
    small_stmt       ir al estado 24
    expr_stmt        ir al estado 25
    print_stmt       ir al estado 26
    del_stmt         ir al estado 27
    pass_stmt        ir al estado 28
    flow_stmt        ir al estado 29
    break_stmt       ir al estado 30
    continue_stmt    ir al estado 31
    return_stmt      ir al estado 32
    compound_stmt    ir al estado 33
    if_stmt          ir al estado 34
    while_stmt       ir al estado 35
    while_else_stmt  ir al estado 36
    for_stmt         ir al estado 37
    for_else_stmt    ir al estado 38
    test             ir al estado 39
    or_test          ir al estado 40
    and_test         ir al estado 41
    not_test         ir al estado 42
    comparison       ir al estado 43
    expr             ir al estado 44
    xor_expr         ir al estado 45
    and_expr         ir al estado 46
    shift_expr       ir al estado 47
    arith_expr       ir al estado 48
    ae_aux           ir al estado 49
    term             ir al estado 50
    factor           ir al estado 51
    atom             ir al estado 52


State 1

  116 atom: STRING .

    $default  reduce usando la regla 116 (atom)


State 2

   17 expr_stmt: IDENTIFICADOR . expr_stmt_aux_b
  113 atom: IDENTIFICADOR .

    MASIGUAL     desplazar e ir al estado 53
    MENOSIGUAL   desplazar e ir al estado 54
    ASTIGUAL     desplazar e ir al estado 55
    DIAIGUAL     desplazar e ir al estado 56
    DDIAIGUAL    desplazar e ir al estado 57
    PORIGUAL     desplazar e ir al estado 58
    AMPIGUAL     desplazar e ir al estado 59
    PIPEIGUAL    desplazar e ir al estado 60
    CIRCIGUAL    desplazar e ir al estado 61
    DMAYORIGUAL  desplazar e ir al estado 62
    DMENORIGUAL  desplazar e ir al estado 63
    DASTIGUAL    desplazar e ir al estado 64

    $default  reduce usando la regla 113 (atom)

    expr_stmt_aux_b  ir al estado 65
    augassign        ir al estado 66


State 3

   32 print_stmt: PRINT . test

    STRING         desplazar e ir al estado 1
    IDENTIFICADOR  desplazar e ir al estado 67
    FALSE          desplazar e ir al estado 4
    TRUE           desplazar e ir al estado 8
    NOT            desplazar e ir al estado 11
    MENOS          desplazar e ir al estado 15
    MAS            desplazar e ir al estado 16
    ENTERO         desplazar e ir al estado 18
    FLOTANTE       desplazar e ir al estado 19

    test        ir al estado 68
    or_test     ir al estado 40
    and_test    ir al estado 41
    not_test    ir al estado 42
    comparison  ir al estado 43
    expr        ir al estado 44
    xor_expr    ir al estado 45
    and_expr    ir al estado 46
    shift_expr  ir al estado 47
    arith_expr  ir al estado 48
    ae_aux      ir al estado 49
    term        ir al estado 50
    factor      ir al estado 51
    atom        ir al estado 52


State 4

  118 atom: FALSE .

    $default  reduce usando la regla 118 (atom)


State 5

   40 return_stmt: RETURN . return_stmt_aux

    STRING         desplazar e ir al estado 1
    IDENTIFICADOR  desplazar e ir al estado 67
    FALSE          desplazar e ir al estado 4
    TRUE           desplazar e ir al estado 8
    NOT            desplazar e ir al estado 11
    MENOS          desplazar e ir al estado 15
    MAS            desplazar e ir al estado 16
    ENTERO         desplazar e ir al estado 18
    FLOTANTE       desplazar e ir al estado 19

    $default  reduce usando la regla 42 (return_stmt_aux)

    return_stmt_aux  ir al estado 69
    test             ir al estado 70
    or_test          ir al estado 40
    and_test         ir al estado 41
    not_test         ir al estado 42
    comparison       ir al estado 43
    expr             ir al estado 44
    xor_expr         ir al estado 45
    and_expr         ir al estado 46
    shift_expr       ir al estado 47
    arith_expr       ir al estado 48
    ae_aux           ir al estado 49
    term             ir al estado 50
    factor           ir al estado 51
    atom             ir al estado 52


State 6

   39 continue_stmt: CONTINUE .

    $default  reduce usando la regla 39 (continue_stmt)


State 7

   57 for_stmt: FOR . IDENTIFICADOR IN testlist DPUNTO NEWLINE suite

    IDENTIFICADOR  desplazar e ir al estado 71


State 8

  117 atom: TRUE .

    $default  reduce usando la regla 117 (atom)


State 9

   55 while_stmt: WHILE . test DPUNTO NEWLINE suite

    STRING         desplazar e ir al estado 1
    IDENTIFICADOR  desplazar e ir al estado 67
    FALSE          desplazar e ir al estado 4
    TRUE           desplazar e ir al estado 8
    NOT            desplazar e ir al estado 11
    MENOS          desplazar e ir al estado 15
    MAS            desplazar e ir al estado 16
    ENTERO         desplazar e ir al estado 18
    FLOTANTE       desplazar e ir al estado 19

    test        ir al estado 72
    or_test     ir al estado 40
    and_test    ir al estado 41
    not_test    ir al estado 42
    comparison  ir al estado 43
    expr        ir al estado 44
    xor_expr    ir al estado 45
    and_expr    ir al estado 46
    shift_expr  ir al estado 47
    arith_expr  ir al estado 48
    ae_aux      ir al estado 49
    term        ir al estado 50
    factor      ir al estado 51
    atom        ir al estado 52


State 10

   33 del_stmt: DEL . IDENTIFICADOR

    IDENTIFICADOR  desplazar e ir al estado 73


State 11

   70 not_test: NOT . not_test

    STRING         desplazar e ir al estado 1
    IDENTIFICADOR  desplazar e ir al estado 67
    FALSE          desplazar e ir al estado 4
    TRUE           desplazar e ir al estado 8
    NOT            desplazar e ir al estado 11
    MENOS          desplazar e ir al estado 15
    MAS            desplazar e ir al estado 16
    ENTERO         desplazar e ir al estado 18
    FLOTANTE       desplazar e ir al estado 19

    not_test    ir al estado 74
    comparison  ir al estado 43
    expr        ir al estado 44
    xor_expr    ir al estado 45
    and_expr    ir al estado 46
    shift_expr  ir al estado 47
    arith_expr  ir al estado 48
    ae_aux      ir al estado 49
    term        ir al estado 50
    factor      ir al estado 51
    atom        ir al estado 52


State 12

   49 if_stmt: IF . test DPUNTO NEWLINE suite if_stmt_aux

    STRING         desplazar e ir al estado 1
    IDENTIFICADOR  desplazar e ir al estado 67
    FALSE          desplazar e ir al estado 4
    TRUE           desplazar e ir al estado 8
    NOT            desplazar e ir al estado 11
    MENOS          desplazar e ir al estado 15
    MAS            desplazar e ir al estado 16
    ENTERO         desplazar e ir al estado 18
    FLOTANTE       desplazar e ir al estado 19

    test        ir al estado 75
    or_test     ir al estado 40
    and_test    ir al estado 41
    not_test    ir al estado 42
    comparison  ir al estado 43
    expr        ir al estado 44
    xor_expr    ir al estado 45
    and_expr    ir al estado 46
    shift_expr  ir al estado 47
    arith_expr  ir al estado 48
    ae_aux      ir al estado 49
    term        ir al estado 50
    factor      ir al estado 51
    atom        ir al estado 52


State 13

   34 pass_stmt: PASS .

    $default  reduce usando la regla 34 (pass_stmt)


State 14

   38 break_stmt: BREAK .

    $default  reduce usando la regla 38 (break_stmt)


State 15

  103 ae_aux: MENOS .

    $default  reduce usando la regla 103 (ae_aux)


State 16

  102 ae_aux: MAS .

    $default  reduce usando la regla 102 (ae_aux)


State 17

    2 file_input: NEWLINE . file_input
